--- a/components/w25q64/CMakeLists.txt
+++ b/components/w25q64/CMakeLists.txt
@@ -1,5 +1,5 @@
 set(component_srcs "w25q64.c")
 
 idf_component_register(SRCS "${component_srcs}"
-                       PRIV_REQUIRES driver
+                       PRIV_REQUIRES driver esp_driver_spi esp_driver_gpio
                        INCLUDE_DIRS ".")
